--- a/index.html
+++ b/index.html
@@ -4,18 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <!-- Don't forget to import the link tot he style sheet above when doing raw CSS  -->
   <title>Form Validation</title>
 </head>
 
 <body>
   <div class="container">
-    <form id="form" class="form"></form>
-    <h2>Register With Us</h2>
-    <div class="form-control">
-      <label for="username">Username </label>
-      <input type="text" id="username" placeholder="Enter User Name">
-      <small>Error Message</small>
-    </div>
+    <form id="form" class="form">
+      <h2>Register With Us</h2>
+      <div class="form-control">
+        <label for="username">Username </label>
+        <input type="text" id="username" placeholder="Enter Username">
+        <small>Error Message</small>
+      </div>
+      <div class="form-control">
+        <label for="email">Email </label>
+        <input type="text" id="email" placeholder="Enter email">
+        <small>Error Message</small>
+      </div>
+      <div class="form-control">
+        <label for="password">Password </label>
+        <input type="password" id="password" placeholder="Enter password">
+        <small>Error Message</small>
+      </div>
+      <div class="form-control">
+        <label for="password2">Confirm Password </label>
+        <input type="text" id="password2" placeholder="Enter password again.">
+        <small>Error Message</small>
+      </div>
+      <button type="submit">Submit</button>
+    </form>
   </div>
   <script src="script.js"></script>
 </body>
