--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="container">
     <form id="form" class="form">
       <h2>Register With Us</h2>
-      <div class="form-control">
+      <div class="form-control success">
         <label for="username">Username </label>
         <input type="text" id="username" placeholder="Enter Username">
         <small>Error Message</small>
       </div>
-      <div class="form-control">
+      <div class="form-control failure">
         <label for="email">Email </label>
         <input type="text" id="email" placeholder="Enter email">
         <small>Error Message</small>
