eventListener for form, showFailuer function to conditionally render the error indicator

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <form id="form" class="form">
       <h2>Register With Us</h2>
-      <div class="form-control">
+      <div class="form-control"> <!-- This is the parent to input below, label, input, small all siblings-->
         <label for="username">Username </label>
         <input type="text" id="username" placeholder="Enter Username">
         <small>Error Message</small>
